<resources>
    <string name="app_name">BjjMechanics</string>
    <string name="page_terms">Термины</string>
    <string name="page_sections">Секции</string>
    <string name="page_education">Обучение</string>
    <string name="page_training">Тренировка</string>
    <string name="page_registration">Войти</string>
    <string name="coaches_collection">Тренерский состав:</string>
    <string name="input">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="btn_input">Войти</string>
    <string name="btn_logout">Выйти</string>
    <string name="not_registration">Не зарегистрированы?</string>
    <string name="btn_registration">Зарегистрироваться</string>
    <string name="email">Эл. почта</string>
    <string name="phone">Телефон</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="output">Выход</string>
    <string name="is_not_alive_send_comment_message">Чтобы оставлять комментарии нужно войти в систему</string>
    <string name="fish_text">В целом, конечно, синтетическое тестирование обеспечивает актуальность поставленных обществом задач. Банальные, но неопровержимые выводы,
        а также тщательные исследования конкурентов, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут
        рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. Картельные сговоры не допускают ситуации, при которой активно развивающиеся страны
        третьего мира, вне зависимости от их уровня, должны быть ограничены исключительно образом мышления! Также как синтетическое тестирование требует анализа позиций,
        занимаемых участниками в отношении поставленных задач. В целом, конечно, синтетическое тестирование обеспечивает актуальность поставленных обществом задач. Банальные, но неопровержимые выводы,
        а также тщательные исследования конкурентов, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут
        рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. Картельные сговоры не допускают ситуации, при которой активно развивающиеся страны
        третьего мира, вне зависимости от их уровня, должны быть ограничены исключительно образом мышления!</string>
</resources>