<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_education"
        android:icon="@drawable/ic_space_mars_photo_alien"
        app:tooltipText="Интерактивная обучалка"
        android:enabled="true"
        android:title="@string/page_education" />

    <item
        android:id="@+id/menu_item_auth"
        android:icon="@drawable/ic_space_mars_photo_alien"
        app:tooltipText="Вход в аккаунт"
        android:enabled="true"
        android:title="@string/page_registration" />

    <item
        android:id="@+id/menu_item_sections"
        android:icon="@drawable/ic_space_mars_photo_alien"
        app:tooltipText="Секции города"
        android:enabled="true"
        android:title="@string/page_sections" />

    <item
        android:id="@+id/menu_item_terms"
        android:icon="@drawable/ic_space_mars_photo_alien"
        app:tooltipText="BJJ Термины"
        android:enabled="true"
        android:title="@string/page_terms" />

</menu>