<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_auth_load_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_border"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/login_group"
            android:layout_width="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="login, password, screen_title, btn_input"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/registration_group"
            android:layout_width="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids=""
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/logout_group"
            android:layout_width="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids=""
            android:layout_height="wrap_content" />



        <TextView
            android:id="@+id/screen_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/left_border"
            app:layout_constraintRight_toRightOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login"
            android:textAlignment="center"
            android:text="@string/input"
            android:textSize="48dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dark_gray"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Вход" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/login"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="@id/left_border"
            app:layout_constraintRight_toRightOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@+id/screen_title"
            app:startIconDrawable="@drawable/ic_space_mars_photo_alien">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            app:layout_constraintLeft_toLeftOf="@id/left_border"
            app:layout_constraintRight_toRightOf="@id/right_border"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_border"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:startIconDrawable="@drawable/ic_space_mars_photo_alien"
            app:endIconMode="password_toggle"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_input"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="@id/left_border"
            app:layout_constraintRight_toRightOf="@id/right_border"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_input"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="@id/left_border"
            app:layout_constraintRight_toRightOf="@id/right_border"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            app:layout_constraintTop_toBottomOf="@+id/btn_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include android:id="@+id/loading" layout="@layout/loading_layout" />

</FrameLayout>